# haskell-pgm

./: .gitignore  Properties.hs  Properties.hs~  README  patch  pgm.cabal
Graphics/: Pgm.hs  Pgm.hs~
